<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fingerprint</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="setup_end">End</string>
    <string name="fingerprint_use">Use Fingerprint To</string>
    <string name="fingerprint_vesion">Version</string>
    <string name="fingerprint_photo_control">Take photo</string>
    <string name="fingerprint_music_control">Music control</string>
    <string name="fingerprint_answer_control">Answer call</string>
    <string name="fingerprint_desktop_control">Desktop sliding</string>
    <string name="fingerprint_reading_control">Reading page</string>
    <string name="fingerprint_app_lock">Access app lock</string>
    <string name="fingerprint_password_setting">Set Pattern，PIN number or password</string>
    <string name="fingerprint_unclock">Unclock screen</string>
    <string name="fingerprint_password">In order to protect your privacy, the fingerprint features in only unlock way for Pattern, PIN
			Or digital password to use</string>
    <string name="fingerprint_shortcut_keys"> Shortcut Keys</string>
    <string name="fingerprint_add">Add new fingerprint</string>
    <string name="fingerprint_app_unlock">Fingerprint App Unlock</string>
    <string name="fingerprint_manage">Fingerprint Manage</string>
    <string name="fingerprint_note">Fingerprint Collection Manage</string>
    <string name="fingerprint_unlock_note">Use fingerprint to unlock phone</string>
    <string name="fingerprint_app_lock_note">App Fingerprint Unlock</string>
    <string name="fingerprint_match_app">App Fingerprint Match</string>
    <string name="fingerprint_photograph_note">Touch the fingerprint sensor to take a photo</string>
    <string name="fingerprint_music_note">Touch the fingerprint sensor switch music</string>
    <string name="fingerprint_answer_note">Touch the fingerprint sensor to answer a call</string>
    <string name="fingerprint_desktop_note">Touch the fingerprint sensor sliding desktop</string>
    <string name="fingerprint_reading_note">Touch the fingerprint sensor reading page</string>
    <string name="fingerprint_applock_note">Use fingerprint to access app lock and locked apps</string>
    <string name="fingerprint_password_note">Initial Applock pwd:</string>
    <string name="fingerprint_manage_note">Fingerprint information collection and management</string>
    <string name="fingerprint_add_note">Add fingerprint</string>
    <string name="fingerprint_version_note">Check the version information</string>
    <string name="arithmetic_version">Arithmetic Version：</string>
    <string name="arithmetic">Version1.0</string>
    <string name="application_version">Application Version：</string>
    <string name="module_version">Module Version：</string>
    <string name="module">bl229x</string>
    <string name="record_continue">Continue</string>
    <string name="fp_name">Fingerprint</string>
    <string name="match_app">Match App</string>
    <string name="fingerprint_add_shortcut">Add Shortcut</string>
    <string name="sure">Sure</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="finish">Finish</string>
    <string name="input_pwd_title_new">Create</string>
    <string name="input_pwd_title_update">Update</string>
    <string name="fingerprint_pwd">set applock pwd</string>
    <string name="fingerprint_change_pwd">Change Password</string>
    <string name="fingerprint_music_cntrol">Music control</string>
    <string name="fingerprint_version">Version</string>
    <string name="fingerprint_version_button">OK</string>
    <string name="title_activity_passwd">PasswdActivity</string>
    <string name="input_first_pwd">Input Password To Protect Your Fingerprint</string>
    <string name="input_confirm_pwd">Please Confirm The Password</string>
    <string name="input_confirm_pwd_error">Two times the password is not consistent，please confirm the password</string>
    <string name="input_pwd">Input New Password</string>
    <string name="input_error_pwd">Error! Input Again!</string>
    <string name="match_fp">Click Button, Start comparing</string>
    <string name="match_fp_ing">comparing...</string>
    <string name="match_fp_res">Result：%1$d ，compare%2$s \n if result score is more than 600 means successful \n notes：recoding and comparing should put your finger to the sensor。each finger needs five steps.</string>
    <string name="match_test_start">Start</string>
    <string name="match_test_success">Pass</string>
    <string name="match_test_fail">Not Pass</string>
    <string name="fp_detail">Detail</string>
    <string name="fp_detail_delete">Delete The Fingerprint？</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="record_fp_title_first">Place your fingers</string>
    <string name="record_fp_title">Repeatedly press your fingers</string>
    <string name="record_fp_content_first">Place your fingers on the back of the fingerprint reader.</string>
    <string name="record_fp_content">Input complete fingerprint need to continue to press repeatedly</string>
    <string name="record_fp_content_remove_first">Please lift your finger after pressing</string>
    <string name="record_fp_content_remove">Please raise your finger</string>
    <string name="record_fp_title_positive">Place the finger on the back of the center of the sensing area.</string>
    <string name="record_fp_content_first_positive">Place the finger on the back of the center of the sensing area.</string>
    <string name="record_fp_title_left">Please enter the left edge of the fingerprint</string>
    <string name="record_fp_title_left_top">Please enter the upper left corner of the fingerprint.</string>
    <string name="record_fp_title_right_top">Please enter the upper right corner of the fingerprint.</string>
    <string name="record_fp_title_right">Please enter the right edge of the fingerprint</string>
    <string name="record_fp_title_right_bottom">Please enter the lower right corner of the fingerprint</string>
    <string name="record_fp_title_left_bottom">Please enter the lower left corner of the fingerprint</string>
    <string name="record_fp_content_left">Place the left edge of the finger in the center of the sensing area of the back of the fingerprint.</string>
    <string name="record_fp_content_left_top">Place the upper left corner of the finger in the center of the sensing region of the back.</string>
    <string name="record_fp_content_right_top">Position the upper right corner of the finger at the center of the sensing area of the back of the fingerprint.</string>
    <string name="record_fp_content_right">Place the right edge of the finger in the center of the sensing area of the back of the fingerprint.</string>
    <string name="record_fp_content_right_bottom">Position the bottom right corner of the finger to the center of the sensing area of the back of the fingerprint.</string>
    <string name="record_fp_content_left_bottom">Place the left lower corner of the finger in the center of the sensing area of the back of the fingerprint.</string>
    <string name="fp_sensor_inuse">Other app using sensor，Please Try Again!</string>
    <string name="fp_addfail">Fail，Please Try Again!</string>
    <string name="fp_fail_overtime">Please press your finger!</string>
    <string name="fp_fail_tooquick">Too Quick，Please Try Again!</string>
    <string name="fp_fail_notin_center">Not in the center，Please Try Again!</string>
    <string name="fp_no_pwd">No Password, Please Try Fingerprint Or Set Password</string>
    <string name="fp_tryagain">Please Try Again!</string>
    <string name="pwd_tryagain">Password Error,Please Try Again!</string>
    <string name="menu_manage_release_sensor">Manual release sensor</string>
    <string name="menu_manage_needlock_apps">Lock Apps</string>
    <string name="lockui_guide">Unlock\nUse Fingerprint Or Inout Password</string>
    <string name="lockui_title">App Locked</string>
    <string name="record_step">Step%1$s</string>
    <string name="record_successfully">Record Successfully</string>
    <string name="fp_test_guide">Put Your Finger To The Sensor</string>
    <string name="correct">Collect</string>
    <string name="error">Wrong</string>
    <string name="reset">Reset</string>
    <string name="new_name_warning">New name can\'t be empty!</string>
    <string name="toDigital">Digital Password</string>
    <string name="finger_notice">Release encryption \n please press the back of the phone</string>
    <string name="digital_notice">Release encryption \n please enter the correct digital password</string>
<!-- davie -->
    <string name="navgation_func">Fingerprint Gesture</string>
    <string name="navgation_func_note">KEY_BACK:Single Click KEY_HOME:Double Click SCREEN_OFF:Long Press</string>
</resources>
