<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/corner_1"
        android:orientation="vertical"
        android:padding="6dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#ffffff"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:background="@drawable/i_unlock"
                android:gravity="center_vertical" />

            <TextView
                android:id="@+id/manage_appunlock_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/fingerprint_unclock"
                android:textColor="@color/tv_color_black"
                android:textSize="16dp" />

            <ToggleButton
                android:id="@+id/manage_appunlock_tb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="3dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:button="@drawable/toggle_btn"
                android:checked="false"
                android:textOff=""
                android:textOn="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_marginLeft="9dp"
            android:background="#ffffff"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="2dp"
                android:text="@string/fingerprint_unlock_note"
                android:textColor="#717171"
                android:textSize="10dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="#DBDBDB" />
<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#ffffff"
            android:onClick="gotoLockApps"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:background="@drawable/i_lock"
                android:gravity="center_vertical" />

            <TextView
                android:id="@+id/manage_applock_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center_vertical"
                android:onClick="gotoLockApps"
                android:padding="10dp"
                android:text="@string/fingerprint_app_lock"
                android:textColor="@color/tv_color_black"
                android:textSize="16dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="16dp"
                android:src="@drawable/arrow_right" >
            </ImageView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_marginLeft="9dp"
            android:background="#ffffff"
            android:onClick="gotoLockApps"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="2dp"
                android:text="@string/fingerprint_applock_note"
                android:textColor="#717171"
                android:textSize="10dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="#DBDBDB" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#ffffff"
            android:onClick="addFP"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="11dp"
                android:background="@drawable/i_add" />

            <TextView
                android:id="@+id/id_manage_addfp_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:clickable="true"
                android:onClick="addFP"
                android:padding="10dp"
                android:text="@string/fingerprint_add"
                android:textSize="16dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="16dp"
                android:src="@drawable/arrow_right" >
            </ImageView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_marginLeft="9dp"
            android:background="#ffffff"
            android:onClick="addFP"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="2dp"
                android:text="@string/fingerprint_add_note"
                android:textColor="#717171"
                android:textSize="10dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lv_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/corner" >

        <ListView
            android:id="@+id/id_lv_finger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="6dp"
            android:divider="#ffffff"
            android:dividerHeight="1px" >
        </ListView>
    </LinearLayout>

</LinearLayout>